force-app/main/default/objects/Project_Bidders__c/Project_Bidders__c.object-meta.xml
<CustomObject>
    <description>Used to associate multiple &quot;account&quot; objects, or bidders, with projects, or opportunities.</description>
    <label>Project Bidder</label>
    <nameField>
        <displayFormat>Bidder-{000000}</displayFormat>
        <label>Project Bidders Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Bidders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>