force-app/main/default/objects/Project_Bidders__c/fields/Bidder_Involvement_Date__c.field-meta.xml
<CustomField>
    <fullName>Bidder_Involvement_Date__c</fullName>
    <label>Bidder Involvement Date</label>
    <type>Date</type>
</CustomField>