force-app/main/default/objects/Project_Bidders__c/fields/Bidder_name__c.field-meta.xml
<CustomField>
    <fullName>Bidder_name__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+Id, LEFT((Account__r.Name &amp;&quot; - Bidder - &quot;&amp; Opportunity__r.Name),80))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bidder name</label>
    <type>Text</type>
</CustomField>