force-app/main/default/objects/Project_Bidders__c/fields/Not_Winning_Bidder__c.field-meta.xml
<CustomField>
    <fullName>Not_Winning_Bidder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Winning Bidder</label>
    <type>Checkbox</type>
</CustomField>