force-app/main/default/objects/Project_Bidders__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities - Project Bidder Primary Contact</relationshipLabel>
    <relationshipName>Project_Bidders</relationshipName>
    <type>Lookup</type>
</CustomField>