force-app/main/default/objects/Project_Bidders__c/fields/Winning_Bidder__c.field-meta.xml
<CustomField>
    <fullName>Winning_Bidder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Winning Bidder</label>
    <type>Checkbox</type>
</CustomField>