force-app/main/default/objects/Project_Bidders__c/validationRules/Account_type.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_type</fullName>
    <active>false</active>
    <errorConditionFormula>Opportunity__r.AccountId =  Account__c</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Selected account is already own by Opportunity, please select a another account.</errorMessage>
</ValidationRule>