force-app/main/default/objects/Project_Bidders__c/validationRules/WinningAndNotWinnig.validationRule-meta.xml
<ValidationRule>
    <fullName>WinningAndNotWinnig</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Winning_Bidder__c=true, Not_Winning_Bidder__c =true)</errorConditionFormula>
    <errorMessage>Please Select either Winnig or Not Winning</errorMessage>
</ValidationRule>